--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,5 +19,7 @@
         "react"
     ],
     "rules": {
+        "react/react-in-jsx-scope": 0,
+        "@typescript-eslint/space-before-function-paren": 0
     }
 }
